--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,31 +1,65 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
-repo: upptime # The name of this repository
+owner: gnosischain
+repo: gnosischain-uptime
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
+  - name: "RPC"
+    method: POST
+    url: https://rpc.gnosischain.com/
+    headers: ["Content-Type: application/json"]
+    body: |
+      {
+        "method": "eth_blockNumber",
+        "params":[],
+        "id":1,
+        "jsonrpc":"2.0"
+      }
+    
+  - name: "Beacon RPC"
+    url: https://rpc-gbc.gnosischain.com/eth/v1/beacon/headers
+
+  - name: "Gnosisscan"
+    url: https://gnosisscan.io/
+
+  - name: "Blockscout Explorer"
+    url: https://blockscout.com/xdai/mainnet
+
+  - name: "Beacon Explorer"
+    url: https://beacon.gnosischain.com/
+
+  - name: "Ethstats"
+    url: https://ethstats.gnosischain.com/
+  
+  - name: "Optimism on GnosisChain"
+    url: https://optimism.gnosischain.com/
+
+  - name: "Faucet"
+    url: https://gnosisfaucet.com/
+
+  - name: "xDaiBridge"
+    url: https://bridge.gnosischain.com/
+
+  - name: "OmniBridge"
+    url: https://omni.gnosischain.com/bridge
+
+  - name: "GBC Nodewatch"
+    url: https://nodewatch.gnosischain.com/
+
+  - name: "ETH2 Nodewatch"
+    url: https://nodewatch-mainnet.gnosischain.com/
+
 
 status-website:
-  # Add your custom domain name, or remove the `cname` line if you don't have a domain
-  # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: demo.upptime.js.org
-  # baseUrl: /your-repo-name
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
-  navbar:
-    - title: Status
-      href: /
-    - title: GitHub
-      href: https://github.com/$OWNER/$REPO
+  name: GnosisChain
+  introTitle: "**GnosisChain** the Community-Run Chain"
+  introMessage: Check the availability for GnosisChain services
+  cname: status.gnosischain.com
+  theme: light
+  workflowSchedule:
+    graphs: "0 0 * * *"
+    responseTime: "0 23 * * *"
+    summary: "0 0 * * *"
+    uptime: "*/5 * * * *"
 
-# Upptime also supports notifications, assigning issues, and more
-# See https://upptime.js.org/docs/configuration
+
+
