--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -61,7 +61,10 @@ status-website:
   workflowSchedule:
     graphs: "0 0 * * *"
     responseTime: "0 23 * * *"
+    staticSite: "0 1 * * *"
     summary: "0 0 * * *"
+    updateTemplate: "0 0 * * *"
+    updates: "0 3 * * *"
     uptime: "*/5 * * * *"
 
 
